[build-system]
requires = ["poetry-core<=2.1.2"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "Gitlings"
version = "0.1.0"
description = "Interactive Git Learning Tool"
authors = ["polypopopo <ppolitenhamerc@gmail.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
click = "^8.1.8"
toml = "^0.10.2"
rich = "^14.0.0"
textual = "^3.1.0"
watchdog = "^6.0.0"
gitpython = "^3.1.44"

[tool.poetry.scripts]
gitlings = "gitlings.cli.main:cli"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
